stop resizing too small

--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ body {
     animation: change-color-anim 20s linear infinite;
 }
 
+#logo-top{
+    width: 150px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
 @keyframes change-color-anim {
 	0%,100%{
 		background-color: #865b99;
@@ -77,7 +85,7 @@ h2{
 
 #quiz, #results{
     background-color: #fff;
-    max-width: 40%;
+    max-width: 500px;
     margin: 0 auto;
     position: absolute;
     top: 45%;
